--- a/code/UI/Hud/MainPlayerHud.scss
+++ b/code/UI/Hud/MainPlayerHud.scss
@@ -1,4 +1,4 @@
-﻿HealthHud {
+﻿HealthLabel {
   position: absolute;
   right: 50px;
   top: 40px;
@@ -14,7 +14,7 @@
   border-radius: 10px;
 }
 
-NameHud {
+PlayerNameLabel {
   position: absolute;
   left: 50px;
   top: 40px;
