--- a/code/Resources/UI/PlayerNameTag.scss
+++ b/code/Resources/UI/PlayerNameTag.scss
@@ -7,17 +7,18 @@
   .title
   {
     font-family: Roboto;
-    font-size: 30px;
+    font-size: 60px;
+    font-weight: bold;
     white-space: nowrap;
     color: #ffffff;
     mix-blend-mode: lighten;
-    text-shadow: 0px 0px 5px #000000;
+    text-shadow: 0 0 2px #FFFF00;
   }
 
   .avatar
   {
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     margin-right: 15px;
     border-radius: 100px;
     background-size: cover;
