--- a/code/Resources/UI/MainPlayerHud.scss
+++ b/code/Resources/UI/MainPlayerHud.scss
@@ -4,7 +4,7 @@
   top: 40px;
   font-size: 40px;
   font-weight: bold;
-  color: white;
+  color: red;
   height: 80px;
   padding: 0 20px;
   align-items: center;
@@ -36,7 +36,7 @@ RemainingZombiePanel {
   bottom: 40px;
   font-size: 40px;
   font-weight: bold;
-  color: white;
+  color: limegreen;
   height: 80px;
   padding: 0 20px;
   align-items: center;
@@ -53,7 +53,7 @@ CurrentWaveLabel {
   font-size: 40px;
   font-weight: bold;
   text-decoration: underline;
-  color: white;
+  color: black;
   height: 80px;
   padding: 0 20px;
   align-items: center;
@@ -69,7 +69,7 @@ CurrentAmmoLabel {
   bottom: 40px;
   font-size: 40px;
   font-weight: bold;
-  color: white;
+  color: yellow;
   height: 80px;
   padding: 0 20px;
   align-items: center;
@@ -85,7 +85,7 @@ CurrentGrenadeLabel {
   bottom: 130px;
   font-size: 40px;
   font-weight: bold;
-  color: white;
+  color: green;
   height: 80px;
   padding: 0 20px;
   align-items: center;
@@ -101,7 +101,7 @@ CurrentMoneyLabel {
   top: 130px;
   font-size: 40px;
   font-weight: bold;
-  color: white;
+  color: green;
   height: 80px;
   padding: 0 20px;
   align-items: center;
