--- a/code/Resources/UI/MainPlayerHud.scss
+++ b/code/Resources/UI/MainPlayerHud.scss
@@ -9,7 +9,7 @@
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -25,7 +25,7 @@ PlayerNameLabel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -41,7 +41,7 @@ RemainingZombiePanel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -58,7 +58,7 @@ CurrentWaveLabel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -74,7 +74,7 @@ CurrentAmmoLabel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -90,7 +90,7 @@ CurrentGrenadeLabel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
 }
@@ -106,7 +106,24 @@ CurrentMoneyLabel {
   padding: 0 20px;
   align-items: center;
   font-family: Poppins, serif;
-  background-color: rgba(#333, 0.4);
+  background-color: rgba(#333, 0.5);
   backdrop-filter: blur(20px);
   border-radius: 10px;
+}
+
+ScoreboardUI {
+    position: absolute;
+    left: 680px;
+    top: 250px;
+    font-size: 40px;
+    font-weight: bold;
+    color: white;
+    height: 600px;
+    width: 1000px;
+    padding: 0 20px;
+    align-items: center;
+    font-family: Poppins, serif;
+    background-color: rgba(#232323, 1);
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
 }
