--- a/code/Resources/UI/PlayerNameTag.scss
+++ b/code/Resources/UI/PlayerNameTag.scss
@@ -6,7 +6,7 @@
 
   .title
   {
-    font-family: Roboto;
+    font-family: Roboto, serif;
     font-size: 60px;
     font-weight: bold;
     white-space: nowrap;
