--- a/code/Resources/UI/InteractableIndicator.scss
+++ b/code/Resources/UI/InteractableIndicator.scss
@@ -11,7 +11,7 @@
     font-size: 15px;
     font-weight: bold;
     white-space: nowrap;
-    color: #33a909;
+    color: #0dc5e7;
     mix-blend-mode: lighten;
     text-shadow: 0 0 2px #000000;
   }
