--- a/code/UI/Hud/PlayerInteractablePanel.scss
+++ b/code/UI/Hud/PlayerInteractablePanel.scss
@@ -5,12 +5,12 @@
   align-items: center;
   justify-content: center;
   opacity: 0;
-  transform: scale( 0.5 );
+  transform: scale(0.5);
   transition: all 0.1s ease-out;
 
   &.visible {
     opacity: 1;
-    transform: scale( 1 );
+    transform: scale(1);
   }
 
   .message {
@@ -25,7 +25,7 @@
   .value {
     font-size: 42px;
     font-weight: bold;
-    margin-right: 10px;
+    margin-right: 20px;
     top: 100px;
     color: #2bd77e;
     border-color: #ffffff;
@@ -35,6 +35,15 @@
     top: 100px;
     width: 48px;
     height: 48px;
+    color: #2bd77e;
+    border-color: #ffffff;
+  }
+
+  .cost {
+    font-size: 42px;
+    font-weight: bold;
+    margin-left: 20px;
+    top: 100px;
     color: #2bd77e;
     border-color: #ffffff;
   }
