--- a/code/UI/Hud/PlayerInventoryPanel.scss
+++ b/code/UI/Hud/PlayerInventoryPanel.scss
@@ -39,7 +39,7 @@ PlayerInventoryElementPanel {
     right: 0;
     color: white;
     font-weight: bolder;
-    top: 35%;
+    top: 15px;
     opacity: 100;
     transition: all 0.1s ease-out;
   }
