--- a/code/UI/Hud/PlayerInventoryPanel.scss
+++ b/code/UI/Hud/PlayerInventoryPanel.scss
@@ -32,6 +32,7 @@ PlayerInventoryElementPanel {
   }
 
   .name {
+    font-size: 25px;
     width: 140px;
     height: 140px;
     background-size: 100%;
