--- a/code/UI/Hud/PlayerInventoryPanel.scss
+++ b/code/UI/Hud/PlayerInventoryPanel.scss
@@ -19,18 +19,7 @@ PlayerInventoryElementPanel {
   border-radius: 10px;
   opacity: .5;
   font-family: Roboto, serif;
-
-  .icon {
-    width: 140px;
-    height: 140px;
-    background-size: 100%;
-    position: absolute;
-    left: 95px;
-    top: -35px;
-    opacity: 100;
-    transition: all 0.1s ease-out;
-  }
-
+  
   .name {
     font-size: 25px;
     width: 140px;
@@ -78,16 +67,23 @@ PlayerInventoryElementPanel {
     transition: all 0.1s ease-out;
   }
 
+  .icon {
+    z-index: -10;
+    width: 155px;
+    height: 70px;
+    background-size: 100%;
+    position: absolute;
+    right: 0;
+    top: 0;
+    opacity: 100;
+    transition: all 0.1s ease-out;
+  }
+
   &.active {
-    transform: scale(1);
+    transform: scale(1.1);
     transition: all 0.1s ease-out;
     //width: 190px;
     //height: 60px;
-
-    .icon {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
 
     .name {
       opacity: 100;
@@ -105,6 +101,11 @@ PlayerInventoryElementPanel {
     }
 
     .ammo-reserve {
+      opacity: 100;
+      transition: all 0.1s ease-out;
+    }
+
+    .icon {
       opacity: 100;
       transition: all 0.1s ease-out;
     }
