--- a/code/UI/Hud/Inventory/PlayerInventoryPanel.scss
+++ b/code/UI/Hud/Inventory/PlayerInventoryPanel.scss
@@ -8,87 +8,80 @@
 }
 
 PlayerInventoryElementPanel {
+  position: relative;
+  margin: 0 10px 0;
   width: 240px;
   height: 70px;
-  position: relative;
+  border-radius: 5px;
   transition: all 0.1s ease-in-out;
   transform: scale(0.8);
-  margin: 4px 10px 0;
   background-color: #323232;
   backdrop-filter: blur(40px);
-  border-radius: 10px;
   opacity: .5;
   font-family: Roboto, serif;
-  
-  .name {
-    font-size: 25px;
-    width: 140px;
-    height: 140px;
-    background-size: 100%;
-    position: absolute;
-    right: 0;
-    color: white;
-    font-weight: bolder;
-    top: 15px;
-    opacity: 100;
-    transition: all 0.1s ease-out;
-  }
 
   .glyph {
+    position: absolute;
+    right: 93.5%;
+    top: 25%;
     width: 32px;
     height: 32px;
     background-size: 100%;
-    position: absolute;
-    right: 93%;
-    top: 25%;
     opacity: 100;
     transition: all 0.1s ease-out;
   }
 
   .ammo-count {
-    font-size: 25px;
-    font-weight: 900;
     position: absolute;
     top: 10%;
     right: 160px;
+    font-size: 25px;
+    font-weight: 900;
     opacity: 100;
     color: white;
     transition: all 0.1s ease-out;
   }
 
   .ammo-reserve {
-    font-size: 20px;
-    font-weight: 500;
     position: absolute;
     top: 50%;
     right: 160px;
+    font-size: 20px;
+    font-weight: 500;
     opacity: 100;
-    color: #b6b6b6;
+    color: #252525;
+    transition: all 0.1s ease-out;
+  }
+
+  .name {
+    position: absolute;
+    right: 0;
+    top: 25%;
+    width: 155px;
+    height: 70px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.7);
+    font-size: 20px;
+    font-weight: bolder;
+    opacity: 100;
     transition: all 0.1s ease-out;
   }
 
   .icon {
-    z-index: -10;
-    width: 155px;
-    height: 70px;
-    background-size: 100%;
     position: absolute;
     right: 0;
     top: 0;
+    width: 155px;
+    height: 70px;
+    z-index: -10;
+    background-size: 100%;
     opacity: 100;
     transition: all 0.1s ease-out;
   }
 
   &.active {
-    transform: scale(1.1);
+    transform: scale(1);
     transition: all 0.1s ease-out;
-    //width: 190px;
-    //height: 60px;
-
-    .name {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
 
     .glyph {
       opacity: 100;
@@ -101,6 +94,11 @@ PlayerInventoryElementPanel {
     }
 
     .ammo-reserve {
+      opacity: 100;
+      transition: all 0.1s ease-out;
+    }
+
+    .name {
       opacity: 100;
       transition: all 0.1s ease-out;
     }
