--- a/code/UI/Hud/PlayerHudV2.scss
+++ b/code/UI/Hud/PlayerHudV2.scss
@@ -1,10 +1,11 @@
 ﻿PlayerHudV2 {
   position: absolute;
-  right: 30px;
-  bottom: 40px;
-  width: 450px;
-  height: 250px;
-  
+  right: 50px;
+  bottom: 50px;
+  width: 550px;
+  height: 200px;
+  transform: rotateX(10deg) rotateY(15deg);
+  background-color: rgba(255, 255, 255, 0.01);
   opacity: .5;
   border-radius: 1px;
 
@@ -41,7 +42,7 @@
   .player-money {
     position: absolute;
     left: 0;
-    top: 34%;
+    top: 31%;
     font-size: 25px;
     font-weight: bolder;
     opacity: 100;
@@ -51,21 +52,21 @@
   .player-health {
     position: absolute;
     right: 0;
-    top: 34%;
+    top: 32%;
     font-size: 25px;
     font-weight: bold;
     opacity: 100;
-    color: #ff0c0c;
+    color: #ff3a3a;
   }
 
   .player-health-bar {
     position: absolute;
     height: 10px;
-    width: 450px;
+    width: 550px;
     right: 0;
     top: 45%;
     opacity: 100;
-    background-color: #ff0c0c;
+    background-color: #ff3a3a;
 
     &.background-bar {
       background-color: #262626;
@@ -79,60 +80,124 @@
     right: 0;
     top: 50%;
     opacity: 100;
-    background-color: #8ceaa7;
+    background-color: #40a2f1;
 
     &.background-bar {
       background-color: #262626;
     }
   }
+}
 
-  .inventory-slot-1 {
+PlayerInventoryPanel {
+  position: absolute;
+  width: 100%;
+  top: 57%;
+  height: 43%;
+  backdrop-filter: blur(55px);
+  justify-content: flex-start;
+  align-items: flex-end;
+  flex-direction: row;
+}
+
+PlayerInventorySlot {
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #6a6ea9;
+  
+  .name{
     position: absolute;
-    height: 60px;
-    width: 100px;
-    left: 0;
-    top: 55%;
-    opacity: 100;
-    background-color: rgba(80, 204, 185, 0.1);
+    width: 100%;
+    color: white; 
+    font-size: 18px;
+    font-weight: bolder;
+    text-align: center;
+  }
+  
+  .ammo {
+    position: absolute;
+    bottom: 0;
+    right: 5px;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
   }
 
-  .inventory-slot-2 {
+  .glyph {
     position: absolute;
-    height: 60px;
-    width: 100px;
-    left: 101px;
-    top: 55%;
-    opacity: 100;
-    background-color: rgba(80, 204, 185, 0.8);
+    bottom: -30%;
+    left: 35%;
+    width: 32px;
+    height: 32px;
   }
 
-  .inventory-slot-3 {
+  .icon {
     position: absolute;
-    height: 60px;
-    width: 100px;
-    left: 201px;
-    top: 55%;
-    opacity: 100;
-    background-color: rgba(80, 204, 185, 0.8);
+    align-self: center;
+    width: 100%;
+    height: 100%;
   }
-
-  .inventory-slot-4 {
-    position: absolute;
-    height: 60px;
-    width: 100px;
-    left: 301px;
-    top: 55%;
+  
+  &.active{
     opacity: 100;
-    background-color: rgba(80, 204, 185, 0.8);
-  }
-
-  .inventory-slot-5 {
-    position: absolute;
-    height: 60px;
-    width: 100px;
-    left: 401px;
-    top: 55%;
-    opacity: 100;
-    background-color: rgba(80, 204, 185, 0.8);    
+    background-color: #6a6ea9;
   }
 }
+
+
+// Inventory
+
+
+//.inventory {
+//  position: absolute;
+//  width: 100%;
+//  bottom: 40px;
+//  justify-content: center;
+//  align-items: flex-end;
+//  flex-direction: column-reverse;
+//  background-color: red;
+//}
+//  .ammo {
+//    position: absolute;
+//    width: 100px;
+//    left: 75%;
+//    background-color: transparent;
+//    font-size: 24px;
+//    font-weight: bolder;
+//    opacity: 100;
+//    color: white;
+//  }
+//
+//  .icon {
+//    opacity: 100;
+//    color: red;
+//    transform: rotateY(90deg);
+//  }
+//
+//  &.active {
+//    opacity: 100;
+//    background-color: rgba(64, 162, 241);
+//  }
+//
+//  &.slot-1 {
+//    left: 0;
+//  }
+//
+//  &.slot-2 {
+//    left: 28%;
+//  }
+//
+//  &.slot-3 {
+//    left: 56%;
+//    width: 90px;
+//  }
+//
+//  &.slot-4 {
+//    left: 72%;
+//    width: 90px;
+//  }
+//
+//  &.slot-5 {
+//    left: 601px;
+//    width: 90px;
+//  }
