--- a/code/UI/Hud/Inventory/PlayerInventoryPanel.scss
+++ b/code/UI/Hud/Inventory/PlayerInventoryPanel.scss
@@ -1,143 +1,55 @@
 ﻿PlayerInventoryPanel {
   position: absolute;
   width: 100%;
-  bottom: 40px;
-  justify-content: center;
+  top: 57%;
+  height: 43%;
+  backdrop-filter: blur(55px);
+  justify-content: flex-start;
   align-items: flex-end;
-  flex-direction: column-reverse;
+  flex-direction: row;
 }
 
-PlayerInventoryElementPanel {
-  position: relative;
-  margin: 0 10px 0;
-  width: 240px;
-  height: 70px;
-  border-radius: 5px;
-  transition: all 0.1s ease-in-out;
-  transform: scale(0.8);
-  background-color: #323232;
-  backdrop-filter: blur(40px);
-  opacity: .5;
-  font-family: Roboto, serif;
+PlayerInventorySlot {
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background-color: #6a6ea9;
+
+  .name{
+    position: absolute;
+    width: 100%;
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+    text-align: center;
+  }
+
+  .ammo {
+    position: absolute;
+    bottom: 0;
+    right: 5px;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
+  }
 
   .glyph {
     position: absolute;
-    right: 93.5%;
-    top: 25%;
+    bottom: -30%;
+    left: 35%;
     width: 32px;
     height: 32px;
-    background-size: 100%;
-    opacity: 100;
-    transition: all 0.1s ease-out;
-  }
-
-  .ammo-count {
-    position: absolute;
-    top: 10%;
-    right: 160px;
-    font-size: 25px;
-    font-weight: 900;
-    opacity: 100;
-    color: white;
-    transition: all 0.1s ease-out;
-  }
-
-  .ammo-reserve {
-    position: absolute;
-    top: 50%;
-    right: 160px;
-    font-size: 20px;
-    font-weight: 500;
-    opacity: 100;
-    color: #252525;
-    transition: all 0.1s ease-out;
-  }
-
-  .name {
-    position: absolute;
-    right: 0;
-    top: 25%;
-    width: 155px;
-    height: 70px;
-    text-align: center;
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 20px;
-    font-weight: bolder;
-    opacity: 100;
-    transition: all 0.1s ease-out;
   }
 
   .icon {
     position: absolute;
-    right: 0;
-    top: 0;
-    width: 155px;
-    height: 70px;
-    z-index: -10;
-    background-size: 100%;
+    align-self: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  &.active{
     opacity: 100;
-    transition: all 0.1s ease-out;
-  }
-
-  &.active {
-    transform: scale(1);
-    transition: all 0.1s ease-out;
-
-    .glyph {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
-
-    .ammo-count {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
-
-    .ammo-reserve {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
-
-    .name {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
-
-    .icon {
-      opacity: 100;
-      transition: all 0.1s ease-out;
-    }
-  }
-
-  // smaller icon for things like grenades
-  &.small {
-    width: 90px;
-    height: 60px;
-
-    .icon {
-      width: 100px;
-      height: 100px;
-      left: 10px;
-      top: -20px;
-    }
-
-    .ammo-count {
-      right: 60px;
-      top: 25%;
-    }
-
-    .ammo-reserve {
-      // why does this use 2 lines if I use left: ?
-      right: 60px;
-      top: 32%;
-    }
-  }
-
-  // hide the smaller icons when empty
-  &.hidden {
-    opacity: 0;
-    width: 90px;
-    height: 20px;
-    transition: all 0.1s ease-out;
+    background-color: #6a6ea9;
   }
 }
